+utf8->html escaping

--- a/README.html
+++ b/README.html
@@ -23,19 +23,22 @@ div:centerbox	{ text-align:center; font-style:italic; display:block; }
 </head>
 <body>
 </body>
-<h1>hibiki</h1>
-<div style="text-align:center; font-style:italic;">
-<a href="http://musicpd.org">Music Player Daemon</a> integration with the <a href="https://awesome.naquadah.org">awesome window manager</a>.
-</div>
-<h2>I. Project outline</h2>
-<ul>
-<li>Firstly, <i>hibiki</i> shall provide a Lua library giving access to all capabilities of the MPD protocol.</li>
-<li>Secondly, it shall offer methods one can use to construct a graphical MPD client based off the awesome window manager's Lua API.</li>
-<li>Thirdly, it shall provide MPD status displays by the means of awesome's <i>naughty</i> nofification and <i>vicious</i> widget library.</li>
-</ul>
-In its implementation, <i>hibiki</i> shant use any library or tool that hant been already put to use by the <i>awesome</i> developers and depend on more things as necessary. With <i>hibiki</i>, I set out both to master the Lua programming language (the earlier, the better, I assume), so in any part of the code, there might be a crux ... well, participants are welcome.
 
-<h2>II. Repository content</h2>
+<h1>hibiki</h1>
+	<div style="text-align:center; font-style:italic;">
+	<a href="http://musicpd.org">Music Player Daemon</a> integration with the <a href="https://awesome.naquadah.org">awesome window manager</a>.
+	</div>
+
+<h2>Project outline</h2>
+	<ul>
+		<li>Firstly, <i>hibiki</i> shall provide a Lua library giving access to all capabilities of the MPD protocol.</li>
+		<li>Secondly, it shall offer methods one can use to construct a graphical MPD client based off the awesome window manager's Lua API.</li>
+		<li>Thirdly, it shall provide MPD status displays by the means of awesome's <i>naughty</i> nofification and <i>vicious</i> widget library.</li>
+	</ul>
+	In its implementation, <i>hibiki</i> shant use any library or tool that hant been already put to use by the <i>awesome</i> developers and depend on more things as necessary. With <i>hibiki</i>, I set out both to master the Lua programming language (the earlier, the better, I assume), so in any part of the code, there might be a crux ... well, participants are welcome.
+
+
+
 <hr>
 <div style="text-align:center; font-style:italic; font-size:10pt;">
 Written by <a href="https://github.com/2ion">Jens Oliver John (2ion)</a>. This site has been published on <a href="https://github.com/2ion/hibiki">github.com</a> as part of the <i>hibiki</i> open source project and will be revisioned as it seems necessary to the author. To this document, the current <i>hibiki</i> project's license applies.
